<resources>
    <string name="app_name">Exercise1</string>
    <string name="daftarB">Belum Daftar?</string>
    <string name="Newnama">Masukkan Email</string>
    <string name="NewPass">Masukkan Password</string>
    <string name="DataKontak">Data Kontak</string>
    <string name="Login">Login</string>
    <string name="Pendaftaran">Pendaftaran</string>
    <string name="Agama">Agama :</string>
    <string name="Katolik">Katolik</string>
    <string name="Islam">Islam</string>
    <string name="Hindu">Hindu</string>
    <string name="Budha">Budha</string>
    <string name="Konghuchu">Konghuchu</string>
    <string name="Penganut">Penganut <br></br>Kepercayaan</string>
    <string name="Kristen">Kristen</string>
    <string name="Kelamin">Jenis Kelamin:</string>
    <string name="masukNama">Masukkan Nama</string>
    <string name="masukAlamat">Masukkan Alamat</string>
    <string name="masukEmail">Masukkan Email</string>
    <string name="masukPass">Masukkan Password</string>
    <string name="rePass">Masukkan Kembali Password</string>
    <string name="batal">Batal</string>
    <string name="daftar">Datar</string>
    <string name="lihatdata">Lihat Data</string>
    <string name="liharnomor">Lihat Nomor</string>
    <string name="namaitem">Nama Item</string>
    <string name="detailKontak">Detail Kontak</string>
    <string name="nama">Nama</string>
    <string name="notel">No Telepon</string>
    <string name="HINT">Pass dan Email Disini</string>
</resources>