<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Daftar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="25pt"
            android:layout_marginBottom="10dp"
            android:text="@string/Pendaftaran"
            android:textAlignment="center"
            android:textSize="18pt" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/masukNama"
                android:inputType="textPersonName"></com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtAlamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/masukAlamat"
                android:inputType="textPersonName"></com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="63dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/Kelamin"
                android:textSize="8pt" />

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="Laki-Laki"
                app:buttonTint="@color/black" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Perempuan"
                app:buttonTint="@color/black" />

        </TableRow>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="155dp"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="76dp"
                android:layout_height="146dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="58dp"
                    android:layout_height="26dp"
                    android:text="@string/Agama"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <RadioGroup
                android:layout_width="87dp"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButton10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Katolik"
                    android:buttonTint="@color/black"/>

                <RadioButton
                    android:id="@+id/radioButton11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Islam"
                    android:buttonTint="@color/black"/>

                <RadioButton
                    android:id="@+id/radioButton12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Kristen"
                    android:buttonTint="@color/black"/>
            </RadioGroup>

            <RadioGroup
                android:layout_width="90dp"
                android:layout_height="146dp">
                <RadioButton
                    android:id="@+id/radioButton13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Hindu"
                    android:buttonTint="@color/black"/>

                <RadioButton
                    android:id="@+id/radioButton14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Budha"
                    android:buttonTint="@color/black"/>

                <RadioButton
                    android:id="@+id/radioButton15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Konghuchu"
                    android:buttonTint="@color/black"/>
            </RadioGroup>
            <RadioGroup
                android:layout_width="123dp"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/radioButton16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Penganut"
                    android:buttonTint="@color/black"/>
            </RadioGroup>

        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/masukEmail"
                android:inputType="textEmailAddress"></com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/masukPass"
                android:inputType="textPassword"></com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtRePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:hint="@string/rePass"
                android:inputType="textPassword"></com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="102dp">

            <Button
                android:id="@+id/btnDaftar"
                android:layout_width="50pt"
                android:layout_height="wrap_content"
                android:text="@string/daftar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.765"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.522" />

            <Button
                android:id="@+id/btnBatal"
                android:layout_width="50pt"
                android:layout_height="wrap_content"
                android:text="@string/batal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnDaftar"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.522" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</ScrollView>