<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="188dp"
        android:layout_height="210dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.103"
        app:srcCompat="@drawable/user" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="406dp"
        android:layout_height="201dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.176">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/EdNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Newnama"
                android:inputType="textPersonName">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/EdPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/NewPass"
                android:inputType="textPassword">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
<!--        <EditText-->
<!--            android:id="@+id/EdPass"-->
<!--            android:layout_width="150pt"-->
<!--            android:layout_height="25pt"-->
<!--            android:ems="10"-->
<!--            android:hint="@string/NewPass"-->
<!--            android:inputType="textPassword"-->
<!--            android:textSize="8pt" />-->

<!--        <EditText-->
<!--            android:id="@+id/EdNama"-->
<!--            android:layout_width="150pt"-->
<!--            android:layout_height="25pt"-->
<!--            android:ems="10"-->
<!--            android:hint="@string/Newnama"-->
<!--            android:inputType="textPersonName"-->
<!--            android:textSize="8pt" />-->

    </LinearLayout>

    <Button
        android:id="@+id/LoginBtn"
        android:layout_width="100pt"
        android:layout_height="25pt"
        android:insetLeft="0dp"
        android:text="@string/Login"
        android:textSize="8pt"
        app:elevation="2dp"
        app:layout_constraintBottom_toTopOf="@+id/daftar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.629" />

    <TextView
        android:id="@+id/daftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daftarB"
        android:textSize="10pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.634" />

</androidx.constraintlayout.widget.ConstraintLayout>